Minor fixes to Share header:  - HTML encoding for user item title and user status (prevent XSS attacks)  - User avatar squashed in user item area if not exactly 64x64 pixels  - User avatar generated label
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@21587 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: eb1f380ca95556f5c4824cd53f0024e7f446ba47

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -208,6 +208,9 @@
    outline: medium none;
    padding: 0 10px 4px !important;
    position: absolute;
+   width: 64px;
+   height: 64px;
+   overflow: hidden;
 }
 
 .header .user-items span.user-status
